chinese alignment issues for the start page #88

--- a/data/css/welcome.css
+++ b/data/css/welcome.css
@@ -243,6 +243,7 @@ color: white;
 .button-group .btn-icon {
   vertical-align: middle;
   color: #4c8ac9;
+  width: 20px; 
 }
 
 .button-group .btn {
